fixed overflow of container issue

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -202,6 +202,11 @@ p.posts,em{
     color: rgb(8, 8, 172);
     font-weight: bold;
 }
+
+.dateDetails,.postedOn,.posted{
+    font-size: 1.317vw;
+}
+
 .heading{
  font-family: 'Roboto', sans-serif;;
  color: rgb(3, 3, 121);
@@ -1394,13 +1399,12 @@ button,input[type = 'button'], input[type = 'submit']{
 
 .comment{
     width:100%;
-    height: 30vh;
     
 }
 
 .comment textarea{
     width:60%;
-    height:50%;
+    height: 15vh;
     overflow-y: scroll; 
 }  
 
@@ -1706,6 +1710,15 @@ span.posted{
         padding:1.2rem;
         font-size:  1.171vh;
         }
+        .dateDetails,.postedOn,.posted{
+            font-size: 1.317vh;
+        }
+ }
+
+ @media only screen and (orientation:landscape){
+    .comment textarea{
+        height: 15vw;
+    } 
  }
 
  .backdrop{
